# ScribeAI

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.agents/skills/concept-evaluator/: SKILL.md
.agents/skills/handwriting-extractor/: SKILL.md
.agents/skills/report-generator/: SKILL.md
app/: agent.py  marking_scheme.json
scratch/: cleanup.py  generate_test_pdfs.py  test_batch.py  test_batch_pdf.py  test_imports.py  test_pipeline.py  test_response_mock.py  verify_new_pdfs.py  verify_real_sheet.py  verify_sample_folder.py
tests/: test_agent.py
